--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vim-notes-chrome-extension",
+  "name": "notes-chrome-extension",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,17 +8,18 @@
     "build": "parcel build src/index.html --public-url=\"./\""
   },
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "codemirror": "^5.40.0",
+    "@babel/polyfill": "^7.0.0",
+    "draft-js": "^0.10.5",
     "postcss-modules": "^1.3.2",
-    "react": "^16.5.1",
-    "react-codemirror": "^1.0.0",
-    "react-dom": "^16.5.1"
+    "react": "^16.7.0-alpha.0",
+    "react-dom": "^16.7.0-alpha.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "@babel/core": "^7.1.6",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-transform-async-to-generator": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
     "cssnano": "^4.1.0"
   }
 }
