--- a/manifest.json
+++ b/manifest.json
@@ -12,5 +12,5 @@
     "newtab": "dist/index.html"
   },
   "permissions": ["storage"],
-  "content_security_policy": "default-src 'self'; script-src 'self' 'unsafe-eval'; connect-src ws://localhost:63168/; font-src *; style-src *;"
+  "content_security_policy": "default-src 'self'; script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/; connect-src ws://localhost:63168/; font-src *; style-src *;"
 }
