--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "classnames": "^2.2.6",
     "draft-js": "^0.10.5",
+    "easy-peasy": "^1.6.1",
     "postcss-modules": "^1.3.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0"
