--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@babel/polyfill": "^7.0.0",
     "classnames": "^2.2.6",
     "draft-js": "^0.10.5",
+    "draft-js-linkify-plugin": "^2.0.1",
+    "draft-js-plugins-editor": "^2.1.1",
     "easy-peasy": "^1.6.1",
     "postcss-modules": "^1.3.2",
     "react": "^16.7.0-alpha.0",
