--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "notes-chrome-extension",
+  "name": "notes-browser-extension",
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
