--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel watch src/index.html --public-url=\"./\" --hmr-hostname localhost --hmr-port 63168",
-    "build": "parcel build src/index.html --public-url=\"./\" --no-source-maps"
+    "build": "parcel build src/index.html --public-url=\"./\" --no-source-maps && cp -R icons ./dist/ && cp -R manifest-prod.json ./dist/manifest.json"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
