--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "coconote",
-  "version": "1.0.3",
+  "name": "Coconote",
+  "version": "1.0.4",
   "manifest_version": 2,
   "description": "T3ke notes in your browser new tab.",
   "icons": {
