--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "easy-peasy": "^1.6.1",
     "postcss-modules": "^1.3.2",
     "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0"
+    "react-dom": "^16.7.0-alpha.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
