--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "Coconote",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "manifest_version": 2,
-  "description": "T3ke notes in your browser new tab.",
+  "description": "Take notes in your browser new tab.",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
