--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel watch src/index.html --public-url=\"./\" --hmr-hostname localhost --hmr-port 63168",
-    "build": "rm -rf dist && parcel build src/index.html --public-url=\"./\" --no-source-maps && cp -R icons ./dist/ && cp -R manifest-prod.json ./dist/manifest.json && zip -r -X dist.zip dist"
+    "build": "rm -rf dist && rm ./dist.zip && parcel build src/index.html --public-url=\"./\" --no-source-maps && cp -R icons ./dist/ && cp -R manifest-prod.json ./dist/manifest.json && zip -r -X dist.zip dist"
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
