--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draft-js-linkify-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.1.1",
     "easy-peasy": "^1.6.1",
+    "lz-string": "^1.4.4",
     "postcss-modules": "^1.3.2",
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
