--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notes-browser-extension",
-  "version": "1.0.0",
+  "version": "1.3.0",
   "license": "MIT",
   "scripts": {
     "start": "parcel watch src/index.html --public-url=\"./\" --hmr-hostname localhost --hmr-port 63168",
@@ -13,11 +13,11 @@
     "draft-js": "^0.10.5",
     "draft-js-linkify-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.1.1",
-    "easy-peasy": "^1.6.1",
+    "easy-peasy": "^2.1.5",
     "lz-string": "^1.4.4",
     "postcss-modules": "^1.3.2",
-    "react": "^16.7.0-alpha.0",
-    "react-dom": "^16.7.0-alpha.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
