--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-modules": "^1.3.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-sortable-hoc": "^1.8.3",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
