--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "draft-js-linkify-plugin": "^2.0.1",
     "draft-js-plugins-editor": "^2.1.1",
     "easy-peasy": "^2.1.5",
+    "firebase": "^7.5.2",
     "lz-string": "^1.4.4",
     "postcss-modules": "^1.3.2",
     "react": "^16.8.6",
