--- a/manifest-prod.json
+++ b/manifest-prod.json
@@ -11,6 +11,9 @@
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
   "permissions": ["storage"],
   "content_security_policy": "default-src 'self'; script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/; connect-src ws://localhost:63168/; font-src *; style-src *;"
 }
