draft-js-markdown-shortcuts-plugin

--- a/manifest-prod.json
+++ b/manifest-prod.json
@@ -15,5 +15,5 @@
     "default_popup": "popup.html"
   },
   "permissions": ["storage"],
-  "content_security_policy": "default-src 'self'; script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/; connect-src ws://localhost:63168/; font-src *; style-src *;"
+  "content_security_policy": "default-src 'self'; script-src 'self' 'unsafe-eval' https://ajax.googleapis.com/; connect-src ws://localhost:63168/; font-src *; style-src * 'unsafe-inline';"
 }
