--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "draft-js": "^0.10.5",
     "draft-js-linkify-plugin": "^2.0.1",
+    "draft-js-markdown-shortcuts-plugin": "^0.5.0",
     "draft-js-plugins-editor": "^2.1.1",
     "easy-peasy": "^2.1.5",
     "file-saver": "^2.0.2",
